# cis-194-2013

./: README.md  cis194.cabal  stack.yaml
src/CIS194/Week01/: Hanoi.hs  Luhn.hs
src/CIS194/Week02/: Log.hs  LogAnalysis.hs
src/CIS194/Week03/: Golf.hs
src/CIS194/Week04/: HigherOrder.hs
src/CIS194/Week05/: Calc.hs  Calculator.hs  ExprT.hs  Parser.hs  StackVM.hs
src/CIS194/Week06/: Fibonacci.hs
src/CIS194/Week07/: Editor.hs  JoinList.hs  Scrabble.hs
src/CIS194/Week08/: Employee.hs  Party.hs
src/CIS194/Week09/: AParser.hs
src/CIS194/Week10/: AParser.hs
src/CIS194/Week11/: SExpr.hs
src/CIS194/Week12/: Risk.hs
test/: HanoiSpec.hs
test/CIS194/Week01/: HanoiSpec.hs  LuhnSpec.hs
test/CIS194/Week02/: LogAnalysisSpec.hs
test/CIS194/Week03/: GolfSpec.hs
test/CIS194/Week04/: HigherOrderSpec.hs
test/CIS194/Week05/: CalcSpec.hs  CalculatorSpec.hs
test/CIS194/Week06/: FibonacciSpec.hs
week-01/: Hanoi.hs  Luhn.hs
