name:                cis194
version:             0.1.0.0
synopsis:            Solutions for CIS 194: Introduction to Haskell (Spring 2013)
description:         Exploring functional programming for fun through the lectures and assignments shown at CIS 194.
homepage:            https://github.com/acamino/cis-194-2013
license:             MIT
license-file:        LICENSE
author:              Agustin Camino
maintainer:          agustin.camino@gmail.com
copyright:           2015 Agustin Camino
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CIS194.Week01.Luhn
                       CIS194.Week01.Hanoi
                       CIS194.Week02.LogAnalysis
                       CIS194.Week02.Log
                       CIS194.Week03.Golf
                       CIS194.Week04.HigherOrder
                       CIS194.Week05.Calculator
                       CIS194.Week05.ExprT
                       CIS194.Week05.Parser
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite cis194-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cis194
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/acamino/cis-194-2013
